1999-01-02  Jeff Garzik  <jgarzik@pobox.com>

	* util.c:
	s/sprintf/g_snprintf/
	s/vsprintf/g_strdup_vprintf/
	Spaced out some code for readability.

1999-01-02 Raffaele Sena <raff@aromatic.com> via Russell Nelson <nelson@crynwr.com>

	* Fix to autogen.sh for build directory different from package
	top directory.

1998-12-16  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.5.8

	* util.c (IDL_emit_IDL_ident): Use IDL_ns_scope_levels_from_here
	and parent from callback to automatically determine the minimal
	necessary scoping for the identifier; this should allow much more
	IDL from IDL_tree_to_IDL to be fed back unchanged.
	(IDL_tree_get_scope): New function.
	(IDL_tree_to_IDL): Updated to also take an IDL_ns parameter.  Use
	G_GNUC_PRINTF for data output function.  Add new functions to
	handle XPIDL property output for IDL generation.

	* IDL.h, ns.c (IDL_ns_scope_levels_from_here): New function,
	determines the minimal level of scoping to prepend to a identifier
	to qualify it properly, from a different scope.

	* IDL_tree_func changed to include parent, which can differ from
	the node parent link.

1998-12-15  Andrew T. Veliath  <andrewtv@usa.net>

	* (IDL_tree_to_IDL): New public function.  Not yet fully
	implemented, but most stuff will work. Add a call from tstidl.c.
	(IDL_tree_walk): New public function; more generalized version of
	IDL_tree_walk_in_order.

1998-12-05  Andrew T. Veliath  <andrewtv@usa.net>

	* tstidl.c: Add example of IDL_tree_error usage.
	
	* IDL.h, ns.c, util.c: Move __IDL_filename_hash to IDL_ns
	structure.  Rename IDL_property... to IDL_tree_property... Make
	IDL_tree_get_node_info public.

	* Change private yyerrornv, yywarningnv to public IDL_tree_error
	and IDL_tree_warning.

	* tstidl.c, ns.c: Provide example of local parameter declaration
	namespace lookup from parameter attribute property, and modify NS
	assertions to make it more useful outside of parsing.
